--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,7 @@ body {
     font-family: 'Roboto', sans-serif;
     position: fixed;
     overflow-x: hidden;
+    transition: grid-template-rows 0.5s ease-in;
 }
 
 header {
@@ -143,6 +144,35 @@ header p {
     }
 }
 
+@media screen and (max-height: 410px){
+    body {
+        grid-template-columns: 0fr 4fr;
+    }
+    
+    .vertical-nav {
+        transform: translateX(-100%);
+        transition: transform 0.5s ease-in;
+    }
+
+    .menu-icon {
+        display: block;
+        cursor: pointer;
+    }
+
+    .menu-ativo {
+        transform: translateX(0%);
+    }
+
+    .focus-ativo {
+        background-color: rgb(131, 131, 131);
+    }
+
+    .focus-ativo-footer {
+        background-color: rgb(20, 20, 20);
+        color: rgb(131, 131, 131);
+    }
+}
+
 main {
     grid-column-start: 2;
     grid-column-end: 3;
@@ -210,5 +240,11 @@ footer ul li {
 @media screen and (max-width: 410px) {
     footer {
         font-size: 10px;
+    }
+}
+
+@media screen and (max-height: 440px) {
+    body {
+        grid-template-rows: 20vh 70vh 10vh;
     }
 }
