--- a/styles/style.css
+++ b/styles/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 header {
-    background-color: rgb(240, 80, 51);
+    background-color: black;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.5);
     display: flex;
     flex-direction: row;
