--- a/styles/style.css
+++ b/styles/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 header {
-    background-color: black;
+    background-color: rgb(240, 80, 51);
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.5);
     display: flex;
     flex-direction: row;
@@ -144,7 +144,7 @@ header p {
     }
 }
 
-@media screen and (max-height: 1200px){
+@media screen and (max-height: 410px){
     body {
         grid-template-columns: 0fr 4fr;
     }
