git commit -m "Ajustes"

--- a/styles/style.css
+++ b/styles/style.css
@@ -147,6 +147,7 @@ header p {
 @media screen and (max-height: 410px){
     body {
         grid-template-columns: 0fr 4fr;
+        grid-template-rows: 20vh 70vh 10vh;
     }
 
     .vertical-nav {
@@ -232,6 +233,37 @@ footer ul li {
     padding: 0.75rem;
 }
 
+@media screen and (max-width: 640px) {
+    body {
+        grid-template-columns: 0fr 4fr;
+        grid-template-rows: 20vh 70vh 10vh;
+    }
+
+    .vertical-nav {
+        overflow-y: scroll;
+        transform: translateX(-100%);
+        transition: transform 0.5s ease-in;
+    }
+
+    .menu-icon {
+        display: block;
+        cursor: pointer;
+    }
+
+    .menu-ativo {
+        transform: translateX(0%);
+    }
+
+    .focus-ativo {
+        background-color: rgb(131, 131, 131);
+    }
+
+    .focus-ativo-footer {
+        background-color: rgb(20, 20, 20);
+        color: rgb(131, 131, 131);
+    }
+}
+
 @media screen and (max-width: 500px) {
     footer {
         font-size: 12px;
@@ -241,11 +273,5 @@ footer ul li {
 @media screen and (max-width: 410px) {
     footer {
         font-size: 10px;
-    }
-}
-
-@media screen and (max-height: 440px) {
-    body {
-        grid-template-rows: 20vh 70vh 10vh;
     }
 }
