--- a/styles/style.css
+++ b/styles/style.css
@@ -189,7 +189,7 @@ footer ul li {
     }
 
     .vertical-nav .lista ul li {
-        padding-right: 2rem 4rem;
+        padding: 2rem 4rem;
         font-size: 20px;
     }
 
@@ -230,7 +230,7 @@ footer ul li {
     }
 
     .vertical-nav .lista ul li {
-        padding-right: 2rem 4rem;
+        padding: 2rem 4rem;
         font-size: 20px;
     }
 
@@ -271,7 +271,7 @@ footer ul li {
     }
 
     .vertical-nav .lista ul li {
-        padding-right: 2rem 4rem;
+        padding: 2rem 4rem;
         font-size: 20px;
     }
 
