git commit -m "Primeira colocação dos textos produzidos"

--- a/styles/style.css
+++ b/styles/style.css
@@ -123,7 +123,9 @@ main {
     grid-column-end: 3;
     grid-row-start: 2;
     grid-row-end: 2;
-    overflow-y: scroll;
+    overflow-y: auto;
+    scrollbar-color: rgb(100, 100, 100) rgb(50, 50, 50);
+    scrollbar-width: thin;
     transition: background-color 0.5s ease-in;
 }
 
@@ -141,6 +143,7 @@ article h1 {
 article p {
     font-weight: 300;
     font-size: 16px;
+    margin: 1rem 0;
 }
 
 footer {
