--- a/styles/style.css
+++ b/styles/style.css
@@ -25,7 +25,7 @@ header {
     justify-content: center;
     min-height: 8vh;
     align-items: center;
-    z-index: 0;
+    z-index: 2;
     grid-column-start: 1;
     grid-column-end: 3;
     grid-row-start: 1;
@@ -49,7 +49,7 @@ header p {
 .vertical-nav {
     background-color: rgb(50, 50, 50);
     display: flex;
-    z-index: 1;
+    z-index: 3;
     overflow-y: hidden;
     overflow-x: hidden;
     margin-right: auto;
@@ -78,6 +78,7 @@ header p {
     color: white;
     letter-spacing: 1px;
     font-weight: 400;
+    transition: background-color 0.5s;
 }
 
 .vertical-nav ul a {
@@ -117,6 +118,26 @@ header p {
     margin: 5px;
 }
 
+.focus {
+    display: none;
+    width: 100%;
+    height: 100%;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 4;
+    opacity: 0;
+    z-index: 1;
+    background-color: black;
+    transition: opacity 0.5s;
+}
+
+.focus-ativo {
+    display: block;
+    opacity: 0.5;
+    transition: opacity 0.5s;
+}
+
 main {
     grid-column-start: 2;
     grid-column-end: 3;
@@ -125,7 +146,7 @@ main {
     overflow-y: auto;
     scrollbar-color: rgb(100, 100, 100) rgb(50, 50, 50);
     scrollbar-width: thin;
-    transition: background-color 0.5s ease-in;
+    background-color: white;
     padding: 1rem;
 }
 
@@ -168,7 +189,6 @@ footer {
     letter-spacing: 1px;
     font-size: 16px;
     padding: auto;
-    transition: background-color 0.5s ease-in, color 0.5s ease-in, font-size 0.2s ease-in;
 }
 
 footer p {
@@ -224,15 +244,6 @@ footer ul li {
         transform: translateX(0%);
     }
 
-    .focus-ativo {
-        background-color: rgb(131, 131, 131);
-    }
-
-    .focus-ativo-footer {
-        background-color: rgb(20, 20, 20);
-        color: rgb(131, 131, 131);
-    }
-
     article {
         margin-bottom: 5rem;
     }
@@ -282,15 +293,6 @@ footer ul li {
         transform: translateX(0%);
     }
 
-    .focus-ativo {
-        background-color: rgb(131, 131, 131);
-    }
-
-    .focus-ativo-footer {
-        background-color: rgb(20, 20, 20);
-        color: rgb(131, 131, 131);
-    }
-
     article {
         margin-bottom: 5rem;
     }
@@ -327,10 +329,6 @@ footer ul li {
         font-size: 20px;
     }
 
-    .final {
-        margin-bottom: 15vh;
-    }
-
     .menu-icon {
         display: block;
         cursor: pointer;
@@ -338,15 +336,6 @@ footer ul li {
 
     .menu-ativo {
         transform: translateX(0%);
-    }
-
-    .focus-ativo {
-        background-color: rgb(131, 131, 131);
-    }
-
-    .focus-ativo-footer {
-        background-color: rgb(20, 20, 20);
-        color: rgb(131, 131, 131);
     }
 
     footer {
