--- a/styles/style.css
+++ b/styles/style.css
@@ -119,7 +119,7 @@ header p {
 }
 
 .focus {
-    display: none;
+    display: flex;
     width: 100%;
     height: 100%;
     grid-column-start: 1;
@@ -133,7 +133,6 @@ header p {
 }
 
 .focus-ativo {
-    display: block;
     opacity: 0.5;
     transition: opacity 0.5s;
 }
