--- a/styles/style.css
+++ b/styles/style.css
@@ -122,10 +122,10 @@ header p {
     display: flex;
     width: 100%;
     height: 100%;
-    grid-column-start: 0;
-    grid-column-end: 0;
-    grid-row-start: 0;
-    grid-row-end: 0;
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 1;
+    grid-row-end: 1;
     opacity: 0;
     z-index: 1;
     background-color: black;
@@ -142,7 +142,6 @@ header p {
 }
 
 .logotipos-explicacao {
-    width: 20%;
     float: right;
 }
 
@@ -182,6 +181,7 @@ article p {
     font-weight: 300;
     font-size: 16px;
     margin: 1rem 0;
+    text-align: left;
 }
 
 article img {
