git commit -m "Conteúdo de Instalação do Git no Windows"

--- a/styles/style.css
+++ b/styles/style.css
@@ -177,6 +177,14 @@ article h2 {
     clear: both;
 }
 
+article h2 li {
+    padding: 1rem;
+}
+
+article a {
+    text-decoration: none;
+}
+
 article p {
     font-weight: 300;
     font-size: 16px;
