--- a/styles/style.css
+++ b/styles/style.css
@@ -171,14 +171,16 @@ article h1 {
 }
 
 article h2 {
-    display: inline-block;
+    display: block;
     font-weight: 700;
-    margin: 1rem 0 0;
+    margin: 1rem 0 1rem;
     clear: both;
 }
 
-article h2 li {
-    padding: 1rem;
+article h3 {
+    display: block;
+    margin: 1rem 0 1rem;
+    clear: both;
 }
 
 article a {
@@ -196,6 +198,25 @@ article img {
     display: block;
     padding: 1rem;
     margin: auto;
+}
+
+article ol ul {
+    padding: 0;
+}
+
+.codigo {
+    display: block;
+    margin: 0;
+    width: 250px;
+    padding: 0.5rem;
+    margin: 1rem;
+    background-color: rgb(50, 50, 50);
+    border: 1px solid rgb(50, 50, 50);
+    border-radius: 1rem;
+}
+
+code {
+    color: white;
 }
 
 footer {
