git commit -m "Atualização de CSS"

--- a/styles/style.css
+++ b/styles/style.css
@@ -173,7 +173,7 @@ article h1 {
 article h2 {
     display: block;
     font-weight: 700;
-    margin: 1rem 0 1rem;
+    margin: 1rem 0 0;
     clear: both;
 }
 
