git commit -m "Página de Instalação Concluída"

--- a/styles/style.css
+++ b/styles/style.css
@@ -198,10 +198,44 @@ article img {
     display: block;
     padding: 1rem;
     margin: auto;
+    border-radius: 2rem;
 }
 
 article ol ul {
     padding: 0;
+}
+
+.lista-download {
+    display: flex;
+}
+
+.logo-system {
+    display: flex;
+    padding: 0;
+    margin: auto;
+    border-radius: 0;
+    float: left;
+}
+
+.download {
+    list-style: none;
+    padding: 1rem;
+    margin: 0 1rem 1rem 0;
+    text-align: right;
+    display: flex;
+    color: white;
+}
+
+.windows {
+    background-color: rgb(50, 182, 169);
+}
+
+.linux {
+    background-color: rgb(58, 136, 58);
+}
+
+.download span {
+    margin: 1rem;
 }
 
 .codigo {
