--- a/styles/style.css
+++ b/styles/style.css
@@ -286,6 +286,12 @@ footer ul li {
     padding: 0.75rem;
 }
 
+hr {
+    border: 2px solid rgb(100, 100, 100);
+    border-radius: 1rem;
+    margin: 1rem;
+}
+
 @media screen and (max-width: 624px) {
     body {
         grid-template-columns: 0fr 4fr;
