--- a/styles/style.css
+++ b/styles/style.css
@@ -240,9 +240,7 @@ article ol ul {
 }
 
 .codigo {
-    display: block;
-    margin: 0;
-    width: 250px;
+    display: inline-block;
     padding: 0.5rem;
     margin: 1rem;
     background-color: rgb(50, 50, 50);
