--- a/styles/style.css
+++ b/styles/style.css
@@ -287,7 +287,7 @@ footer ul li {
 hr {
     border: 2px solid rgb(100, 100, 100);
     border-radius: 1rem;
-    margin: 1rem;
+    margin: 1rem auto;
 }
 
 @media screen and (max-width: 624px) {
