--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
@@ -294,8 +295,21 @@ footer ul li {
 
 hr {
     border: 2px solid rgb(100, 100, 100);
+    background-color: rgb(100, 100, 100);
     border-radius: 1rem;
     margin: 1rem auto;
+}
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: rgb(50, 50, 50); 
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgb(100, 100, 100);
 }
 
 @media screen and (max-width: 624px) {
