--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,7 @@ body {
   position: fixed;
   overflow-x: hidden;
   transition: grid-template-rows 0.5s ease-in;
+  min-width: 100vw;
 }
 
 header {
