--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@ body {
     display: grid;
     grid-template-columns: 1fr 4fr;
     grid-template-rows: 10vh 80vh 10vh;
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
     position: fixed;
     overflow-x: hidden;
     transition: grid-template-rows 0.5s ease-in;
